Bug 32347 - Unable to configure Ado connection parameters [FILEOPEN]
Summary: Unable to configure Ado connection parameters [FILEOPEN]
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.4.2 release
Hardware: Other Windows (All)
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:3.5 target:3.4.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2010-12-13 04:51 UTC by Stefano Fraccaro
Modified: 2011-11-28 08:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Ado Browse button (32.03 KB, image/jpeg)
2010-12-13 05:45 UTC, Stefano Fraccaro
Details
OleDB properties (40.35 KB, image/jpeg)
2010-12-13 05:48 UTC, Stefano Fraccaro
Details
patch as described in comment 13 (2.27 KB, patch)
2011-11-23 05:35 UTC, Lionel Elie Mamane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefano Fraccaro 2010-12-13 04:51:43 UTC
Steps to reproduce:
* Open LibreOffice Base 3.3 rc1
* Select option "Connect to existing database"
* Select item "ADO"
* Click "Next" button
* On the next window "Configure ADO connection" click "Browse" button

The button do nothing. Expected: open ADO connection window.
Cpu is 99% idle (no hang or high cpu usage)

LibreOffice 3.3.0 
OOO330m17 (Build:3)
libreoffice-build 3.3.0.1
Windows XP SP3
Comment 1 Don't use this account, use tml@iki.fi 2010-12-13 04:54:16 UTC
This might be a silly question, but just to make sure, you do have an ADO database (whatever that is) and any required software so that you should have to in theory be able to connect to it?
Comment 2 Stefano Fraccaro 2010-12-13 05:12:06 UTC
I think ADO is an acronym from "ActiveX Data Object" (or have I misunderstood?)  that is a library installed by default in every Windows XP (and later) box. I use ADO from my C# software to connect remote SQL Server databases... ADO is OK.

I think "Browse" button do help on building the correct connection string to ADO resources... maybe the problem is that the button should be removed because effectively there is nothing to do
Comment 3 Stefano Fraccaro 2010-12-13 05:45:51 UTC
Created attachment 41057 [details]
Ado Browse button
Comment 4 Stefano Fraccaro 2010-12-13 05:48:34 UTC
Created attachment 41058 [details]
OleDB properties

ADO can use OleDB provider to connect remote resources
Comment 5 Alex Thurgood 2010-12-20 00:45:24 UTC
Did this ever work in OOo ?

Alex
Comment 6 Stefano Fraccaro 2010-12-20 01:39:16 UTC
Yes, in OOo 3.3rc1 works... and appear the second attachment (OleDB properties)
Comment 7 Zoltán Reizinger 2011-01-06 07:44:08 UTC
I can confirm it on win7 with LibO 3.3RC2, nothing happens when click on "Browse" button.

It works in OOo 3.3RC8, can connect to MSSQL server with ADO.
Comment 8 dany franck 2011-06-20 03:05:19 UTC
Nothing happens, and when adding a correct connection string it returns an error message.
LO3.3.3
XPsp3

No problem with OO3.2.1
Comment 9 Alex Thurgood 2011-08-19 00:40:03 UTC
Can someone test this on a recent Win LibO version, i.e. a nightly build ? There was apparently some confusion with the withdrawal of Adabas support, and I noticed that one of the commits actually removed the Ado build strings out of the build, but I think (from a commit I saw yesterday) that it has been sorted out again now.


Alex
Comment 10 Stefano Fraccaro 2011-08-19 00:48:08 UTC
The problem still exists in Lib0 3.4.2
If needed, where can I download a nightly build?

(In reply to comment #9)
> Can someone test this on a recent Win LibO version, i.e. a nightly build ?
> There was apparently some confusion with the withdrawal of Adabas support, and
> I noticed that one of the commits actually removed the Ado build strings out of
> the build, but I think (from a commit I saw yesterday) that it has been sorted
> out again now.
> 
> 
> Alex
Comment 11 Alex Thurgood 2011-08-19 01:19:22 UTC
(In reply to comment #10)
> The problem still exists in Lib0 3.4.2
> If needed, where can I download a nightly build?
> 

Ho hum, there don't actually appear to be any available at the moment...in theory they should be here :

http://dev-builds.libreoffice.org/daily/


but the only ones I can see for Windows are 3.4.2 builds (i.e. the current 3.4.2 release)

You can usually check the status of these (tinderbox) builds here :

http://tinderbox.libreoffice.org/MASTER/status.html

but as you will note, there are no entries for Win, and even the other OSes seem to be having a rather hard time of it at the moment (due to the move to a single source repository and other factors no doubt).

So we'll just have to wait.

Alex
Comment 12 Alex Thurgood 2011-11-23 01:48:29 UTC
I can confirm this on master build from 23/11/2011. Clicking on the Browse button does nothing.


Alex
Comment 13 Lionel Elie Mamane 2011-11-23 05:26:04 UTC
!!!! Bugzilla lost my carefully crafted comment :-(

So starting again, but "it was not as good" as she said:

Need intervention / advice from Windows porter (Tor?).

The immediate cause is that _ADO_DATALINK_BROWSE_ is not #define'd in dbaccess/source/ui/dlg/ConnectionHelper.cxx.

There used to be this code:

 #if !defined(WINDOWS_VISTA_PSDK) && defined(WNT)
 #define _ADO_DATALINK_BROWSE_
 #endif

This explains why OpenOffice 3.3rc1 did not have this bug (compiled with WIndows XP SDK), but LibreOffice 3.3rc1 had this bug (compiled with Windows Vista SDK).

The tinderbox build logs tell me that adodatalinks.cxx is compiled alright now, so my guess is that this whole "disable ADO if compiling with Vista SDK" is obsolete by now. Could a Windows porter just remove all that logic (basically finishing Tor's cleanup job in 4c505502a86f8579711ef869e171f7bcce35f7eb) and test? Thanks in advance.

#define _ADO_DATALINK_BROWSE_ in dbaccess/source/ui/dlg/ConnectionHelper.cxx
Remove all DISABLE_ADO and WINDOWS_VISTA_PSDK logic from dbaccess/Library_dbui.mk and dbaccess/Library_dbu.mk

Compile, test, report.
Comment 14 Lionel Elie Mamane 2011-11-23 05:35:25 UTC
Created attachment 53811 [details]
patch as described in comment 13

Here is a "ready to test" patch, which does what I described in comment 13.
Comment 15 Lionel Elie Mamane 2011-11-23 07:14:59 UTC
https://issues.apache.org/ooo/show_bug.cgi?id=77988 suggests that the whole issue of incompatibility of Vista SDK and ADO was solved in the Vista SDK as of version 6.0.6001.16621.148.

So I'm going to be bold and just push my patch to master; if anything breaks, we'll deal with it.

Other relevant OO.org issues:
https://issues.apache.org/ooo/show_bug.cgi?id=77980
https://issues.apache.org/ooo/show_bug.cgi?id=76713
Comment 16 Lionel Elie Mamane 2011-11-24 10:04:51 UTC
(In reply to comment #15)
> So I'm going to be bold and just push my patch to master; if anything breaks,
> we'll deal with it.

Yes, it works in master (3.5) now. Asking for review to backport to 3.4.5
Comment 17 Lionel Elie Mamane 2011-11-28 08:43:41 UTC
(In reply to comment #16)
> (In reply to comment #15)
>> So I'm going to be bold and just push my patch to master; if anything breaks,
>> we'll deal with it.

> Yes, it works in master (3.5) now. Asking for review to backport to 3.4.5

The fix has been applied to libreoffice-3-4 branch and will be part of release version 3.4.5