fdo#32347: reenable ADO URL helper UI

cleanup obsolete DISABLE_ADO/WINDOWS_VISTA_PSDK logic